--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,11 @@
 ---
-import Layout from "@/layout/Layout";
+import Layout from "@/layouts/Layout";
+import { fetchNews } from "@/lib/api";
+
+const news = await fetchNews();
 ---
 
 <Layout>
   <h1>Genesys News</h1>
+  {news.map((n) => <p>{n.title}</p>)}
 </Layout>
