--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Layout from "@/layouts/Layout";
 import { fetchNews } from "@/lib/api";
 
 const news = await fetchNews();
+console.log(news);
 ---
 
 <Layout>
