--- a/src/components/StoryGrid/StoryGrid.module.css
+++ b/src/components/StoryGrid/StoryGrid.module.css
@@ -1,5 +1,5 @@
 .story-grid {
-  --_gap: 1rem;
+  --_gap: var(--pico-spacing);
   display: grid;
   grid-template-columns: fit-content(100px) 1fr;
   gap: var(--_gap);
