--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,4 +1,4 @@
-ul {
+.menu {
   li {
     text-transform: capitalize;
 
@@ -8,4 +8,11 @@ ul {
       }
     }
   }
+}
+
+.logo {
+  height: 1lh;
+  width: auto;
+  color: var(--pico-primary);
+  margin-inline-end: 4px;
 }
