--- a/src/components/Pagination/Pagination.module.css
+++ b/src/components/Pagination/Pagination.module.css
@@ -1,6 +1,6 @@
 .pagination {
   --_content-max-width: 350px;
-  --_gap: 1rem;
+  --_gap: var(--pico-spacing);
   width: min(var(--_content-max-width), 100%);
   margin-inline: auto;
   gap: var(--_gap);
