--- a/src/pages/[...categories].astro
+++ b/src/pages/[...categories].astro
@@ -4,6 +4,7 @@ import { fetchStories } from "@/lib/api";
 import { categories, type Categories } from "@/lib/model";
 import Pagination from "@/components/Pagination";
 import StoryGrid from "@/components/StoryGrid";
+import Story from "@/components/Story";
 
 const isCategory = (c: string): c is Categories => Object.values(categories).includes(c);
 
@@ -23,7 +24,11 @@ const stories = await fetchStories(category, page);
   </hgroup>
 
   <section>
-    <StoryGrid stories={stories} />
+    <StoryGrid>
+      {stories.map((story) => (
+        <Story key={story.id} story={story} role="listitem" />
+      ))}
+    </StoryGrid>
 
     <Pagination page={page} category={category} />
   </section>
