--- a/src/components/Story/Story.module.css
+++ b/src/components/Story/Story.module.css
@@ -9,6 +9,7 @@
   grid-area: points;
   text-align: center;
   color: var(--pico-muted-color);
+  font-family: var(--pico-font-family-monospace);
 }
 
 .content {
@@ -32,6 +33,7 @@
 
 .title {
   font-size: 1.25rem;
+  margin-block-end: 0.75rem;
 }
 
 .upvote-button {
