--- a/src/pages/[...categories].astro
+++ b/src/pages/[...categories].astro
@@ -1,10 +1,11 @@
 ---
 import Layout from "@/layouts/Layout.astro";
 import { fetchStories } from "@/lib/api";
-import { categories, type Categories } from "@/lib/model";
+import { categories, type Categories, type Stories } from "@/lib/model";
 import Pagination from "@/components/Pagination";
 import StoryGrid from "@/components/StoryGrid";
 import Story from "@/components/Story";
+import Notification from "@/components/Notification";
 
 const isCategory = (c: string): c is Categories => Object.values(categories).includes(c);
 
@@ -14,7 +15,13 @@ const category = categoryParam && isCategory(categoryParam) ? categoryParam : ca
 const pageParam = Astro.url.searchParams.get("page");
 const page = !pageParam || isNaN(+pageParam) ? 1 : parseInt(pageParam);
 
-const stories = await fetchStories(category, page);
+let error = false;
+let stories: Stories = [];
+try {
+  stories = await fetchStories(category, page);
+} catch (e) {
+  error = true;
+}
 ---
 
 <Layout>
@@ -24,12 +31,19 @@ const stories = await fetchStories(category, page);
   </hgroup>
 
   <section>
-    <StoryGrid>
-      {stories.map((story) => (
-        <Story key={story.id} story={story} role="listitem" />
-      ))}
-    </StoryGrid>
-
-    <Pagination page={page} category={category} />
+    {
+      error ? (
+        <Notification>Failed to fetch stories</Notification>
+      ) : (
+        <>
+          <StoryGrid>
+            {stories.map((story) => (
+              <Story key={story.id} story={story} role="listitem" />
+            ))}
+          </StoryGrid>
+          <Pagination page={page} category={category} />
+        </>
+      )
+    }
   </section>
 </Layout>
